[tool.poetry]
name = "discord-bot-test"
version = "0.1.0"
description = ""
authors = ["tomast1337 <vycasnicolas@gmail.com>"]
readme = "README.md"
packages = [{include = "discord_bot_test"}]

[tool.poetry.dependencies]
python = "^3.9"
discord-py = "^2.1.0"
openai = "^0.25.0"
python-dotenv = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
